--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
 /.settings/
 /.DS_Store
 /.project
+/.classpach
+/duantuke-order-biz/.settings/
+/duantuke-order-biz/.project
+/duantuke-order-biz/.classpath
+/duantuke-order-biz/.DS_Store
+/duantuke-order-core/.settings/
+/duantuke-order-core/.project
+/duantuke-order-core/.classpath
+/duantuke-order-core/.DS_Store
+/duantuke-order-face/.settings/
+/duantuke-order-face/.project
+/duantuke-order-face/.classpath
+/duantuke-order-face/.DS_Store
+/duantuke-order-web/.settings/
+/duantuke-order-web/.project
+/duantuke-order-web/.classpath
+/duantuke-order-web/.DS_Store
