--- a/duantuke-order-biz/pom.xml
+++ b/duantuke-order-biz/pom.xml
@@ -25,5 +25,10 @@
 			<artifactId>duantuke-order-face</artifactId>
 			<version>1.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>com.duantuke</groupId>
+			<artifactId>basic-face</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
