--- a/pom.xml
+++ b/pom.xml
@@ -25,28 +25,28 @@
 			</snapshots>
 			<id>public</id>
 			<name>Public Repositories</name>
-			<url>http://repo.fangbaba.com/nexus/content/groups/public/</url>
+			<url>http://nexus.duantuke.com/nexus/content/groups/public/</url>
 		</repository>
 	</repositories>
 	<pluginRepositories>
 		<pluginRepository>
 			<id>public</id>
 			<name>Public Repositories</name>
-			<url>http://repo.fangbaba.com/nexus/content/groups/public/</url>
+			<url>http://nexus.duantuke.com/nexus/content/groups/public/</url>
 		</pluginRepository>
 	</pluginRepositories>
 
 	<distributionManagement>
 		<snapshotRepository>
-			<id>user-snapshot</id>
+			<id>duantuke-user-snapshot</id>
 			<name>User Porject Snapshot</name>
-			<url>http://repo.fangbaba.com/nexus/content/repositories/snapshots/</url>
+			<url>http://nexus.duantuke.com/nexus/content/repositories/snapshots/</url>
 			<uniqueVersion>true</uniqueVersion>
 		</snapshotRepository>
 		<repository>
-			<id>user-release</id>
+			<id>duantuke-user-release</id>
 			<name>User Porject Release</name>
-			<url>http://repo.fangbaba.com/nexus/content/repositories/releases/</url>
+			<url>http://nexus.duantuke.com/nexus/content/repositories/releases/</url>
 		</repository>
 	</distributionManagement>
 
