--- a/pom.xml
+++ b/pom.xml
@@ -436,6 +436,52 @@
 				<dubbo-provide-group>test</dubbo-provide-group>
 			</properties>
 		</profile>
+		<profile>
+			<id>bjtest</id>
+			<properties>
+				<label>product</label>
+				<jdbc.driver>com.mk.jdbc.MonitorDriver</jdbc.driver>
+				<master.jdbc.url><![CDATA[jdbc:monitor4jdbc:mysql://211.157.155.198:3306/otc?zeroDateTimeBehavior=convertToNull&amp;characterEncoding=utf8]]></master.jdbc.url>
+				<master.jdbc.user>root</master.jdbc.user>
+				<master.jdbc.password>dtk@2016</master.jdbc.password>
+				<slave.jdbc.url><![CDATA[jdbc:monitor4jdbc:mysql://211.157.155.198:3306/otc?zeroDateTimeBehavior=convertToNull&amp;characterEncoding=utf8]]></slave.jdbc.url>
+				<slave.jdbc.user>root</slave.jdbc.user>
+				<slave.jdbc.password>dtk@2016</slave.jdbc.password>
+				<spring.redis.sentinel.master>dtk-redis</spring.redis.sentinel.master>
+				<spring.redis.sentinel.nodes>211.157.155.198:26379</spring.redis.sentinel.nodes>
+				<jedis.pool.maxidl>20</jedis.pool.maxidl>
+				<jedis.pool.minidl>8</jedis.pool.minidl>
+				<jedis.pool.maxtotal>500</jedis.pool.maxtotal>
+				<!-- kafka_setting -->
+				<metadata.broker.list>211.157.155.198:9092</metadata.broker.list>
+				<zk.connect>211.157.155.198:2181</zk.connect>
+				<dubbo-group>test</dubbo-group>
+				<dubbo-provide-group>test</dubbo-provide-group>
+			</properties>
+		</profile>
+		<profile>
+			<id>clu</id>
+			<properties>
+				<label>product</label>
+				<jdbc.driver>com.mk.jdbc.MonitorDriver</jdbc.driver>
+				<master.jdbc.url><![CDATA[jdbc:monitor4jdbc:mysql://211.157.155.198:3306/otc?zeroDateTimeBehavior=convertToNull&amp;characterEncoding=utf8]]></master.jdbc.url>
+				<master.jdbc.user>root</master.jdbc.user>
+				<master.jdbc.password>dtk@2016</master.jdbc.password>
+				<slave.jdbc.url><![CDATA[jdbc:monitor4jdbc:mysql://211.157.155.198:3306/otc?zeroDateTimeBehavior=convertToNull&amp;characterEncoding=utf8]]></slave.jdbc.url>
+				<slave.jdbc.user>root</slave.jdbc.user>
+				<slave.jdbc.password>dtk@2016</slave.jdbc.password>
+				<spring.redis.sentinel.master>dtk-redis</spring.redis.sentinel.master>
+				<spring.redis.sentinel.nodes>211.157.155.198:26379</spring.redis.sentinel.nodes>
+				<jedis.pool.maxidl>20</jedis.pool.maxidl>
+				<jedis.pool.minidl>8</jedis.pool.minidl>
+				<jedis.pool.maxtotal>500</jedis.pool.maxtotal>
+				<!-- kafka_setting -->
+				<metadata.broker.list>211.157.155.198:9092</metadata.broker.list>
+				<zk.connect>211.157.155.198:2181</zk.connect>
+				<dubbo-group>test</dubbo-group>
+				<dubbo-provide-group>test</dubbo-provide-group>
+			</properties>
+		</profile>
 	</profiles>
 	<modules>
 		<module>duantuke-order-biz</module>
