--- a/duantuke-order-core/pom.xml
+++ b/duantuke-order-core/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.duantuke</groupId>
-		<artifactId>duantuke_order</artifactId>
+		<artifactId>duantuke-order</artifactId>
 		<version>1.0.0</version>
 	</parent>
 	<artifactId>duantuke-order-core</artifactId>
