--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 /.settings/
 /.DS_Store
 /.project
-/.classpach
+/.classpath
 /duantuke-order-biz/.settings/
 /duantuke-order-biz/.project
 /duantuke-order-biz/.classpath
