--- a/pom.xml
+++ b/pom.xml
@@ -432,7 +432,7 @@
 				<!-- kafka_setting -->
 				<metadata.broker.list>211.157.155.198:9092</metadata.broker.list>
 				<zk.connect>211.157.155.198:2181</zk.connect>
-				<dubbo-group>test</dubbo-group>
+				<dubbo-group>dev</dubbo-group>
 				<dubbo-provide-group>test</dubbo-provide-group>
 			</properties>
 		</profile>
