--- a/duantuke-order-web/src/main/resources/db.properties
+++ b/duantuke-order-web/src/main/resources/db.properties
@@ -7,3 +7,5 @@ master.jdbc.password=${master.jdbc.password}
 slave.jdbc.url=${slave.jdbc.url}
 slave.jdbc.user=${slave.jdbc.user}
 slave.jdbc.password=${slave.jdbc.password}
+
+mongodb.hosts=${mongo.host}
